puppet: add debug mode for OpenStack services
Propagate the top-level Debug parameter wherever it makes sense.

Swift doesn't have this kind of debug setting, it only allows to
configure log levels, so we'll need a different approach there.

Change-Id: I15332315a2fbaeaf924cde4e748fb0e064a778b7

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -531,6 +531,7 @@ resources:
           CloudName: {get_param: CloudName}
           ControlVirtualInterface: {get_param: ControlVirtualInterface}
           ControllerExtraConfig: {get_param: controllerExtraConfig}
+          Debug: {get_param: Debug}
           ExtraConfig: {get_param: ExtraConfig}
           Flavor: {get_param: OvercloudControlFlavor}
           GlancePort: {get_param: GlancePort}
@@ -602,6 +603,7 @@ resources:
           CeilometerComputeAgent: {get_param: CeilometerComputeAgent}
           CeilometerMeteringSecret: {get_param: CeilometerMeteringSecret}
           CeilometerPassword: {get_param: CeilometerPassword}
+          Debug: {get_param: Debug}
           ExtraConfig: {get_param: ExtraConfig}
           Flavor: {get_param: OvercloudComputeFlavor}
           GlanceHost: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
@@ -652,6 +654,7 @@ resources:
       resource_def:
         type: OS::TripleO::BlockStorage
         properties:
+          Debug: {get_param: Debug}
           Image: {get_param: BlockStorageImage}
           CinderISCSIHelper: {get_param: CinderISCSIHelper}
           CinderLVMLoopDeviceSize: {get_param: CinderLVMLoopDeviceSize}
