--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -298,7 +298,7 @@ resources:
               oac_data:
                 nova::compute::vncserver_proxyclient_address: local-ipv4
               mapped_data:
-                #nova::debug: {get_input: debug}
+                nova::debug: {get_input: debug}
                 nova::rabbit_hosts: {get_input: rabbit_hosts}
                 nova::rabbit_userid: {get_input: rabbit_username}
                 nova::rabbit_password: {get_input: rabbit_password}
@@ -310,7 +310,7 @@ resources:
                 nova::compute::vncproxy_host: {get_input: nova_public_ip}
                 nova_enable_rbd_backend: {get_input: nova_enable_rbd_backend}
                 nova_password: {get_input: nova_password}
-                #ceilometer::debug: {get_input: debug}
+                ceilometer::debug: {get_input: debug}
                 ceilometer::rabbit_hosts: {get_input: rabbit_hosts}
                 ceilometer::rabbit_userid: {get_input: rabbit_username}
                 ceilometer::rabbit_password: {get_input: rabbit_password}
@@ -323,7 +323,7 @@ resources:
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
                 nova::glance_api_servers: {get_input: glance_api_servers}
-                #neutron::debug: {get_input: debug}
+                neutron::debug: {get_input: debug}
                 neutron::rabbit_hosts: {get_input: rabbit_hosts}
                 neutron::rabbit_password: {get_input: rabbit_password}
                 neutron::rabbit_user: {get_input: rabbit_user}
