--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -619,9 +619,9 @@ resources:
             controller:
               raw_data: {get_file: hieradata/controller.yaml}
               mapped_data: # data supplied directly to this deployment configuration, etc
-                debug: {get_input: debug}
                 bootstack_nodeid: {get_input: bootstack_nodeid}
                 controller_host: {get_input: controller_host} #local-ipv4
+
                 # Swift
                 swift::proxy::proxy_local_net_ip: {get_input: controller_host}
                 swift::proxy::authtoken::auth_uri: {get_input: keystone_auth_uri}
@@ -637,6 +637,7 @@ resources:
                 # NOTE(dprince): build_ring support is currently not wired in.
                 # See: https://review.openstack.org/#/c/109225/
                 tripleo::ringbuilder::build_ring: True
+
                 # Cinder
                 cinder_enable_rbd_backend: {get_input: cinder_enable_rbd_backend}
                 cinder_lvm_loop_device_size: {get_input: cinder_lvm_loop_device_size}
@@ -652,8 +653,9 @@ resources:
                 cinder::rabbit_password: {get_input: rabbit_password}
                 cinder::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 cinder::rabbit_port: {get_input: rabbit_client_port}
+                cinder::debug: {get_input: debug}
                 cinder_enable_iscsi_backend: {get_input: cinder_enable_iscsi_backend}
-                #cinder::debug: {get_input: debug}
+
                 # Glance
                 glance::api::bind_port: {get_input: glance_port}
                 glance::api::bind_host: {get_input: controller_host}
@@ -661,6 +663,7 @@ resources:
                 glance::api::identity_uri: {get_input: keystone_identity_uri}
                 glance::api::registry_host: {get_input: controller_host}
                 glance::api::keystone_password: {get_input: glance_password}
+                glance::api::debug: {get_input: debug}
                 # used to construct glance_api_servers
                 glance_port: {get_input: glance_port}
                 glance_protocol: {get_input: glance_protocol}
@@ -673,9 +676,11 @@ resources:
                 glance::registry::bind_host: {get_input: controller_host}
                 glance::registry::auth_uri: {get_input: keystone_auth_uri}
                 glance::registry::identity_uri: {get_input: keystone_identity_uri}
+                glance::registry::debug: {get_input: debug}
                 glance::backend::swift::swift_store_auth_address: {get_input: glance_swift_store_auth_address}
                 glance::backend::swift::swift_store_user: service:glance
                 glance::backend::swift::swift_store_key: {get_input: glance_password}
+
                 # Heat
                 heat_stack_domain_admin_password: {get_input: heat_stack_domain_admin_password}
                 heat::engine::heat_watch_server_url: {get_input: heat.watch_server_url}
@@ -695,6 +700,7 @@ resources:
                 heat::api_cfn::bind_host: {get_input: controller_host}
                 heat::database_connection: {get_input: heat_dsn}
                 heat::instance_user: heat-admin
+                heat::debug: {get_input: debug}
 
                 # Keystone
                 keystone::admin_token: {get_input: admin_token}
@@ -706,12 +712,14 @@ resources:
                 keystone::database_connection: {get_input: keystone_dsn}
                 keystone::public_bind_host: {get_input: controller_host}
                 keystone::admin_bind_host: {get_input: controller_host}
-                #keystone::debug: {get_input: debug}
+                keystone::debug: {get_input: debug}
+
                 # MySQL
                 admin_password: {get_input: admin_password}
                 mysql_innodb_buffer_pool_size: {get_input: mysql_innodb_buffer_pool_size}
                 mysql::server::root_password: {get_input: mysql_root_password}
                 mysql_cluster_name: {get_input: mysql_cluster_name}
+
                 # Neutron
                 neutron::bind_host: {get_input: controller_host}
                 neutron::rabbit_hosts: {get_input: rabbit_hosts}
@@ -719,7 +727,7 @@ resources:
                 neutron::rabbit_user: {get_input: rabbit_user}
                 neutron::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 neutron::rabbit_port: {get_input: rabbit_client_port}
-                #neutron::debug: {get_input: debug}
+                neutron::debug: {get_input: debug}
                 neutron::server::auth_uri: {get_input: keystone_auth_uri}
                 neutron::server::identity_uri: {get_input: keystone_identity_uri}
                 neutron::server::database_connection: {get_input: neutron_dsn}
@@ -745,6 +753,7 @@ resources:
                 neutron::agents::metadata::auth_password: {get_input: neutron_password}
                 neutron_dnsmasq_options: {get_input: neutron_dnsmasq_options}
                 neutron_dsn: {get_input: neutron_dsn}
+
                 # Ceilometer
                 ceilometer::metering_secret: {get_input: ceilometer_metering_secret}
                 ceilometer::rabbit_hosts: {get_input: rabbit_hosts}
@@ -752,6 +761,7 @@ resources:
                 ceilometer::rabbit_password: {get_input: rabbit_password}
                 ceilometer::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 ceilometer::rabbit_port: {get_input: rabbit_client_port}
+                ceilometer::debug: {get_input: debug}
                 ceilometer::api::host: {get_input: controller_host}
                 ceilometer::api::keystone_password: {get_input: ceilometer_password}
                 ceilometer::api::keystone_auth_uri: {get_input: keystone_auth_uri}
@@ -760,12 +770,14 @@ resources:
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
+
                 # Nova
                 nova::rabbit_hosts: {get_input: rabbit_hosts}
                 nova::rabbit_userid: {get_input: rabbit_username}
                 nova::rabbit_password: {get_input: rabbit_password}
                 nova::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
                 nova::rabbit_port: {get_input: rabbit_client_port}
+                nova::debug: {get_input: debug}
                 nova::api::auth_uri: {get_input: keystone_auth_uri}
                 nova::api::identity_uri: {get_input: keystone_identity_uri}
                 nova::api::api_bind_address: {get_input: controller_host}
@@ -778,6 +790,7 @@ resources:
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
                 # Rabbit
                 rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
+
                 # Misc
                 neutron_public_interface_ip: {get_input: neutron_public_interface_ip}
                 ntp::servers: {get_input: ntp_servers}
