--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -801,7 +801,8 @@ resources:
                 # Rabbit
                 rabbitmq::node_ip_address: {get_input: controller_host}
                 rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
-
+                # Redis
+                redis::bind: {get_input: controller_host}
                 # Misc
                 memcached::listen_ip: {get_input: controller_host}
                 neutron_public_interface_ip: {get_input: neutron_public_interface_ip}
