--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -46,9 +46,9 @@ resources:
           net.ipv4.tcp_keepalive_intvl: 1
         hiera:
           datafiles:
-            rabbit:
+            all_nodes:
               mapped_data:
-                rabbit_nodes:
+                rabbit_node_names:
                   list_join:
                   - ','
                   - {get_param: controller_names}
