--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -599,10 +599,10 @@ resources:
             - controller
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
-            - rabbit # provided by allNodesConfig
             - ceph_cluster # provided by CephClusterConfig
             - ceph
             - bootstrap_node # provided by BootstrapNodeConfig
+            - all_nodes # provided by allNodesConfig
             - common
           datafiles:
             common:
