Implement mongo_node_ips hiera key
We need a list of hosts where MongoDB is supposed to run (as a list of
IP addresses, not names) to implement MongoDB support in overcloud.

Change-Id: I4b80f13be7e50630314d0642fa32b7763b6a2921

--- a/all-nodes-config.yaml
+++ b/all-nodes-config.yaml
@@ -6,6 +6,8 @@ parameters:
     type: comma_delimited_list
   controller_hosts:
     type: comma_delimited_list
+  controller_ips:
+    type: comma_delimited_list
   block_storage_hosts:
     type: comma_delimited_list
   object_storage_hosts:
