--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -6,6 +6,8 @@ parameters:
     type: comma_delimited_list
   controller_hosts:
     type: comma_delimited_list
+  controller_ips:
+    type: comma_delimited_list
   block_storage_hosts:
     type: comma_delimited_list
   object_storage_hosts:
@@ -52,6 +54,10 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_names}
+                mongo_node_ips:
+                  list_join:
+                  - ','
+                  - {get_param: controller_ips}
 
 outputs:
   config_id:
