lb: Allow multiple backend
Currently tripleo::loadbalancer allow a controller to have only itself
as a backend for a service, no matter the number of controller nodes.
This patch fixes that using all controller nodes available.

Change-Id: Ic8fc022b84850c669b19d37da7f275d9c811e694
Depends-On: I2a46c250bc3325eef9c3128cac2ab45c88b1ae75

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -50,6 +50,10 @@ resources:
           datafiles:
             all_nodes:
               mapped_data:
+                controller_node_ips:
+                  list_join:
+                  - ','
+                  - {get_param: controller_ips}
                 rabbit_node_names:
                   list_join:
                   - ','
