Provide a way to know the boostrap_nodeid IP
Currently it is possible to know what is the hostname of the boostrap
nodeid but not its IP. Since depending on the use case the use of the IP
might be needed, a way to have access to this information should be
provided.

Change-Id: I9d0a7ee7de2088ddb87e0d8a8ae2b3ac75b0e78d

--- a/bootstrap-config.yaml
+++ b/bootstrap-config.yaml
@@ -4,6 +4,8 @@ description: 'Bootstrap Config'
 parameters:
   bootstrap_nodeid:
     type: string
+  bootstrap_nodeid_ip:
+    type: string
 
 resources:
 
@@ -13,6 +15,7 @@ resources:
       config:
         bootstrap_host:
           bootstrap_nodeid: {get_param: bootstrap_nodeid}
+          bootstrap_nodeid_ip: {get_param: bootstrap_nodeid_ip}
 
 outputs:
   config_id:
