--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -745,6 +745,7 @@ resources:
     type: OS::TripleO::BootstrapNode::SoftwareConfig
     properties:
       bootstrap_nodeid: {get_attr: [Controller, resource.0.hostname]}
+      bootstrap_nodeid_ip: {get_attr: [Controller, resource.0.ip_address]}
 
   ControllerBootstrapNodeDeployment:
     type: OS::Heat::StructuredDeployments
