--- a/puppet/bootstrap-config.yaml
+++ b/puppet/bootstrap-config.yaml
@@ -4,6 +4,8 @@ description: 'Bootstrap Config Puppet'
 parameters:
   bootstrap_nodeid:
     type: string
+  bootstrap_nodeid_ip:
+    type: string
 
 resources:
 
@@ -16,6 +18,7 @@ resources:
             bootstrap_node:
               mapped_data:
                 bootstrap_nodeid: {get_param: bootstrap_nodeid}
+                bootstrap_nodeid_ip: {get_param: bootstrap_nodeid_ip}
 
 outputs:
   config_id:
