Enable passing optional first-boot user-data
Currently all the OS::Nova::Server resource created don't pass any
user-data.  It's possible to pass user-data as well as using heat
SoftwareConfig/SoftwareDeployment resources, and this can be useful
when you have simple "first boot" tasks which are possible either via
cloud-init, or via simple run-once scripts.

This enables passing such data by implementing a new provider resource
OS::TripleO::NodeUserData, which defaults to passing an empty mime
archive (thus it's a no-op).  An example of non no-op usage is also
provided.

Change-Id: Id0caba69768630e3a10439ba1fc2547a609c0cfe

--- a/ceph-storage.yaml
+++ b/ceph-storage.yaml
@@ -36,9 +36,14 @@ resources:
         {get_param: Image}
       flavor: {get_param: OvercloudCephStorageFlavor}
       key_name: {get_param: KeyName}
-      user_data_format: SOFTWARE_CONFIG
       networks:
         - network: ctlplane
+      user_data_format: SOFTWARE_CONFIG
+      user_data: {get_resource: NodeUserData}
+
+  NodeUserData:
+    type: OS::TripleO::NodeUserData
+
   CephStorageDeployment:
     type: OS::Heat::StructuredDeployment
     properties:
