--- a/compute.yaml
+++ b/compute.yaml
@@ -259,6 +259,10 @@ resources:
       networks:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
+      user_data: {get_resource: NodeUserData}
+
+  NodeUserData:
+    type: OS::TripleO::NodeUserData
 
   NetworkConfig:
     type: OS::TripleO::Net::SoftwareConfig
