--- a/nagios3.yaml
+++ b/nagios3.yaml
@@ -105,10 +105,15 @@ resources:
       flavor: { get_param: flavor }
       image: { get_param: image }
       key_name: { get_param: key_name }
-      user_data_format: SOFTWARE_CONFIG
       networks:
         - network: { get_param: server_network }
           port: { get_resource: nagios_net_port }
+      user_data_format: SOFTWARE_CONFIG
+      user_data: {get_resource: NodeUserData}
+
+  NodeUserData:
+    type: OS::TripleO::NodeUserData
+
   nagios_floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
