--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -15,3 +15,4 @@ resource_registry:
   OS::TripleO::CephClusterConfig::SoftwareConfig: ceph-cluster-config.yaml
   OS::TripleO::AllNodes::SoftwareConfig: all-nodes-config.yaml
   OS::TripleO::BootstrapNode::SoftwareConfig: bootstrap-config.yaml
+  OS::TripleO::NodeUserData: firstboot/userdata_default.yaml
