--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -108,9 +108,14 @@ resources:
       image: {get_param: Image}
       flavor: {get_param: Flavor}
       key_name: {get_param: KeyName}
-      user_data_format: SOFTWARE_CONFIG
       networks:
         - network: ctlplane
+      user_data_format: SOFTWARE_CONFIG
+      user_data: {get_resource: NodeUserData}
+
+  NodeUserData:
+    type: OS::TripleO::NodeUserData
+
   SwiftStorageDeploy:
     type: OS::Heat::StructuredDeployment
     properties:
