--- a/controller.yaml
+++ b/controller.yaml
@@ -418,6 +418,10 @@ resources:
       networks:
         - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
+      user_data: {get_resource: NodeUserData}
+
+  NodeUserData:
+    type: OS::TripleO::NodeUserData
 
   NetworkConfig:
     type: OS::TripleO::Net::SoftwareConfig
