Update descriptions comments for Ceph params
When trying out Ceph functionally the CephClusterFSID parameter
must be a UUID.

Additionally, the MonKey and AdminKey parameters should be
generated via ceph-authtool (or equivalently generated) to
ensure they work properly with the Ceph configuration.

Change-Id: I0c327843ef225d330d1c668f53324973c78d3505

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -29,14 +29,14 @@ parameters:
   CephClusterFSID:
     default: ''
     type: string
-    description: The Ceph cluster FSID.
+    description: The Ceph cluster FSID. Must be a UUID.
   CephMonKey:
     default: ''
-    description: The Ceph monitors key.
+    description: The Ceph monitors key. Can be created with ceph-authtool --gen-print-key.
     type: string
   CephAdminKey:
     default: ''
-    description: The Ceph admin client key.
+    description: The Ceph admin client key. Can be created with ceph-authtool --gen-print-key.
     type: string
   CinderEnableIscsiBackend:
     default: true
