--- a/ceph-storage.yaml
+++ b/ceph-storage.yaml
@@ -15,14 +15,14 @@ parameters:
   CephClusterFSID:
     default: ''
     type: string
-    description: The Ceph cluster FSID.
+    description: The Ceph cluster FSID. Must be a UUID.
   CephMonKey:
     default: ''
-    description: The Ceph monitors key.
+    description: The Ceph monitors key. Can be created with ceph-authtool --gen-print-key.
     type: string
   CephAdminKey:
     default: ''
-    description: The Ceph admin client key.
+    description: The Ceph admin client key. Can be created with ceph-authtool --gen-print-key.
     type: string
   CephMonitors:
     default: ''
