Wire in list of controller nodes as memcache_servers for Swift proxy
Change-Id: Id193f8c13e3ad3e05bd884be5ba65621b9369d0e

--- a/puppet/swift-devices-and-proxy-config.yaml
+++ b/puppet/swift-devices-and-proxy-config.yaml
@@ -6,7 +6,6 @@ parameters:
     type: comma_delimited_list
   object_store_swift_devices:
     type: comma_delimited_list
-  # TODO: add support for puppet swift proxy memcache configuration
   controller_swift_proxy_memcaches:
     type: comma_delimited_list
 
@@ -30,6 +29,14 @@ resources:
                     - list_join:
                       - ", "
                       - {get_param: object_store_swift_devices}
+                swift::proxy::cache::memcache_servers:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: controller_swift_proxy_memcaches}
 
 outputs:
   config_id:
