--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -75,10 +75,10 @@ parameters:
     description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     type: string
   RabbitPassword:
-    default: ''
+    default: 'guest'
     type: string
   RabbitUserName:
-    default: ''
+    default: 'guest'
     type: string
   RabbitClientUseSSL:
     default: false
