--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -110,13 +110,13 @@ parameters:
       network) - if changing this either use different post-install network
       scripts or be sure to keep 'datacentre' as a mapping network name.
     type: string
-    default: ""
+    default: "datacentre:br-ex"
   NeutronEnableTunnelling:
     type: string
     default: "True"
   NeutronFlatNetworks:
     type: string
-    default: ''
+    default: 'datacentre'
     description: >
       If set, flat networks to configure in neutron plugins.
   NeutronHost:
@@ -139,7 +139,7 @@ parameters:
     type: string
     hidden: true
   NeutronPhysicalBridge:
-    default: ''
+    default: 'br-ex'
     description: An OVS bridge to create for accessing external networks.
     type: string
   NeutronPublicInterface:
