Make memcached bind on ctlplane instead of 0.0.0.0
Change-Id: I06f7066bf9eacf3ef0f5d73c0cfa65eaf4f74cff

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -789,10 +789,12 @@ resources:
                 nova::network::neutron::neutron_admin_password: {get_input: neutron_password}
                 nova::network::neutron::neutron_url: {get_input: neutron_url}
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
+
                 # Rabbit
                 rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
 
                 # Misc
+                memcached::listen_ip: {get_input: controller_host}
                 neutron_public_interface_ip: {get_input: neutron_public_interface_ip}
                 ntp::servers: {get_input: ntp_servers}
                 control_virtual_interface: {get_input: control_virtual_interface}
