Make rabbitmq bind on ctlplane instead of 0.0.0.0
Change-Id: I353cffc13f56b54ce2d2aeb1468b9a7c51765d7c

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -789,7 +789,9 @@ resources:
                 nova::network::neutron::neutron_admin_password: {get_input: neutron_password}
                 nova::network::neutron::neutron_url: {get_input: neutron_url}
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
+
                 # Rabbit
+                rabbitmq::node_ip_address: {get_input: controller_host}
                 rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
 
                 # Misc
