--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -144,6 +144,13 @@ parameters:
     default: http
     description: Protocol to use when connecting to glance, set to https for SSL.
     type: string
+  GlanceBackend:
+    default: swift
+    description: The short name of the Glance backend to use. Should be one
+      of swift, rbd, or file
+    type: string
+    constraints:
+    - allowed_values: ['swift', 'file', 'rbd']
   HeatPassword:
     default: unset
     description: The password for the Heat service account, used by the Heat services.
@@ -491,6 +498,7 @@ resources:
         glance_port: {get_param: GlancePort}
         glance_protocol: {get_param: GlanceProtocol}
         glance_password: {get_param: GlancePassword}
+        glance_backend: {get_param: GlanceBackend}
         glance_swift_store_auth_address: {list_join: ['', ['http://', {get_param: VirtualIP} , ':5000/v2.0']]}
         glance_notifier_strategy: {get_param: GlanceNotifierStrategy}
         glance_log_file: {get_param: GlanceLogFile}
@@ -708,6 +716,7 @@ resources:
                 glance::backend::swift::swift_store_auth_address: {get_input: glance_swift_store_auth_address}
                 glance::backend::swift::swift_store_user: service:glance
                 glance::backend::swift::swift_store_key: {get_input: glance_password}
+                glance_backend: {get_input: glance_backend}
 
                 # Heat
                 heat_stack_domain_admin_password: {get_input: heat_stack_domain_admin_password}
