--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -37,3 +37,12 @@ resources:
     properties:
       servers:  {get_param: servers}
       config: {get_resource: StorageRingbuilderPuppetConfig}
+
+  # Note, this should come last, so use depends_on to ensure
+  # this is created after any other resources.
+  ExtraConfig:
+    depends_on: StorageRingbuilderDeployment_Step2
+    type: OS::TripleO::NodeExtraConfigPost
+    properties:
+        servers: {get_param: servers}
+
