--- a/swift-storage-post.yaml
+++ b/swift-storage-post.yaml
@@ -6,3 +6,13 @@ description: 'Swift Storage Post Deployment'
 parameters:
   servers:
     type: json
+
+resources:
+
+  # Note, this should come last, so use depends_on to ensure
+  # this is created after any other resources.
+  ExtraConfig:
+    type: OS::TripleO::NodeExtraConfigPost
+    properties:
+        servers: {get_param: servers}
+
