--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -63,6 +63,10 @@ parameters:
     default: ''
     description: Set to True to enable debugging on all services.
     type: string
+  EnableGalera:
+    default: true
+    description: Whether to use Galera instead of regular MariaDB.
+    type: boolean
   ExtraConfig:
     default: {}
     description: |
@@ -507,6 +511,7 @@ resources:
             - - 'http://'
               - {get_param: VirtualIP}
               - ':5000/v2.0/'
+        enable_galera: {get_param: EnableGalera}
         mysql_innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
         mysql_root_password: {get_param: MysqlRootPassword}
         mysql_cluster_name:
@@ -717,6 +722,7 @@ resources:
 
                 # MySQL
                 admin_password: {get_input: admin_password}
+                enable_galera: {get_input: enable_galera}
                 mysql_innodb_buffer_pool_size: {get_input: mysql_innodb_buffer_pool_size}
                 mysql::server::root_password: {get_input: mysql_root_password}
                 mysql_cluster_name: {get_input: mysql_cluster_name}
