--- a/controller.yaml
+++ b/controller.yaml
@@ -63,6 +63,10 @@ parameters:
     default: ''
     description: Set to True to enable debugging on all services.
     type: string
+  EnableGalera:
+    default: true
+    description: Whether to use Galera instead of regular MariaDB.
+    type: boolean
   ExtraConfig:
     default: {}
     description: |
